# PDFMathTranslate

./: pyproject.toml
pdf2zh/: __init__.py  cache.py  config.py  converter.py  doclayout.py  executor.py  high_level.py  pdf2zh.py  pdfinterp.py  translator.py
pdf2zh/assets/: assets.py  embedding_assets_metadata.py
