[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf2zh"
version = "1.9.6"
description = "Latex PDF Translator"
authors = [{ name = "Byaidu", email = "byaidux@gmail.com" }]
license = "AGPL-3.0"
readme = "README.md"
requires-python = ">=3.12,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    # for arm64 linux whells
    "pymupdf<1.25.3",
    "tqdm",
    "tenacity",
    "numpy",
    "openai",
    "huggingface_hub",
    "onnx",
    "onnxruntime",
    "opencv-python-headless",
    "pdfminer.six>=20240706",
    "pikepdf",
    "peewee>=3.17.8",
    "fontTools",
    "rich",
    "aiolimiter>=1.2.1",
]

[project.optional-dependencies]

[dependency-groups]
dev = ["black", "flake8", "pre-commit", "pytest", "build", "bumpver>=2024.1130"]

[project.urls]
Homepage = "https://github.com/Byaidu/PDFMathTranslate"

[project.scripts]
pdf2zhx = "pdf2zh.pdf2zh:main"

[tool.uv]
index-url = "http://mirrors.aliyun.com/pypi/simple"

[tool.uv.pip]
index-url = "http://mirrors.aliyun.com/pypi/simple"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823"]
select = ["C", "E", "F", "I", "W"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
"src/transformers/file_utils.py" = ["F401"]
"src/transformers/utils/dummy_*.py" = ["F401"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["transformers"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
